add testing to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist =
-    lint
+envlist = lint, tests
 isolated_build = True
 
 
@@ -13,3 +12,12 @@ commands =
     ruff format . --check
     # Lint code and docstrings
     ruff check .
+
+[testenv:tests]
+description = Run the test suite with pytest.
+basepython = py310
+# Use the "test" extra which we define in pyproject.toml to include minimal testing deps.
+# If your tests require the full heavy dependencies, change this to "extras = ds".
+extras = test
+commands =
+    pytest --maxfail=1 --disable-warnings -q
