--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ dev = [
 ]
 ds = [
     "numpy==1.26.4",
-    "pandas==2.2.2",
     "torch==2.5.1",
     "torchvision",
     "torchaudio",
@@ -30,12 +29,25 @@ ds = [
     "tqdm==4.67.1",
     "matplotlib==3.10.0",
     "seaborn==0.13.2",
-    "Pillow",
-    "pytest"
+    "pytest",
+    "Pillow"
 ]
 lint = [
     "mypy",
     "ruff",
+]
+test = [
+    "pytest",
+    "matplotlib==3.10.0",
+    "numpy==1.26.4",
+    "torch==2.5.1",
+    "tensorflow",
+    "tf-keras",
+    "transformers",
+    "scikit-learn",
+    "scipy==1.13.1",
+    "seaborn==0.13.2",
+    "Pillow"
 ]
 
 [tool.setuptools]
